# crunchmania

./: Makefile  README.md  mkdocs.yml  pyproject.toml
src/crunchmania/: __init__.py  bitreader.py  bitwriter.py  cli.py  constants.py  header.py  pack.py  unpack.py
tests/: conftest.py  test_cli.py  test_header.py  test_pack.py  test_unpack.py
