[project]
name = "crunchmania"
description = "unpacking crunch-mania files from the Amiga days"
version = "0.1.0"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
readme = "README.md"
requires-python = ">=3.10"

license = "Unlicense"
keywords = ["crunchmania", "crunch-mania", "amiga", "decompression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.scripts]
crunchmania = "crunchmania.cli:main"

[project.urls]
Homepage = "https://bitplane.net/dev/python/crunchmania"
Repository = "https://github.com/bitplane/crunchmania"
Issues = "https://github.com/bitplane/crunchmania/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "pydoc-markdown"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
